--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>com.hillert.transformer.Main</mainClass>
+                    <mainClass>com.excelsiorsoft.transformer.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
